--- a/backend/ecommerce/src/main/resources/application.properties
+++ b/backend/ecommerce/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.username=root
 spring.datasource.password=123hitesh
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required: true
+spring.mail.properties.mail.smtp.ssl.enable = true
