--- a/backend/ecommerce/pom.xml
+++ b/backend/ecommerce/pom.xml
@@ -96,6 +96,20 @@
 			<artifactId>jjwt-api</artifactId>
 			<version>0.12.5</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.4.8</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>28.0.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
